--- a/mandelbulber2/formula/ui/transf_spherical_fold4d_v2.ui
+++ b/mandelbulber2/formula/ui/transf_spherical_fold4d_v2.ui
@@ -429,7 +429,7 @@ Offset:</string>
         <property name="text">
          <string notr="true">&lt;p&gt;spherical fold 4D&lt;br&gt;This formula contains aux.color&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KochV5_polyFld_sphereFld.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
