--- a/mandelbulber2/formula/ui/koch_v5.ui
+++ b/mandelbulber2/formula/ui/koch_v5.ui
@@ -2877,7 +2877,7 @@ offset:</string>
         <property name="text">
          <string notr="true">&lt;p&gt;KochV5 Iteration&lt;br&gt;Based on Knighty&#039;s Kaleidoscopic IFS 3D Fractals, described here:&lt;br&gt;http://www.fractalforums.com/3d-fractal-generation/kaleidoscopic-%28escape-time-ifs%29/&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KochV5.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KochV5_001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KochV5 01.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KochV5.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KochV5_001.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KochV5_KochV5.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KochV5_absAddConst.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
