--- a/mandelbulber2/formula/ui/mandelbulb4.ui
+++ b/mandelbulber2/formula/ui/mandelbulb4.ui
@@ -208,7 +208,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;Fractal formula created by Buddhi&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;mandelbulb4_001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;mandelbulb4_001.fract&lt;br&gt;nebula 004.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
