fractal_msltoe_sym3_mod6.cpp add aux.col

--- a/mandelbulber2/formula/ui/msltoe_sym3_mod6.ui
+++ b/mandelbulber2/formula/ui/msltoe_sym3_mod6.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>880</width>
-    <height>3105</height>
+    <height>3419</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1060,11 +1060,32 @@ Multiplier:</string>
     </widget>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_11">
+    <widget class="QLabel" name="label_122">
+     <property name="text">
+      <string>Symmetric rotation</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout_11" columnstretch="0,1,0,1">
      <property name="spacing">
       <number>2</number>
      </property>
-     <item row="0" column="1">
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_64">
+       <property name="text">
+        <string>start at iteration:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLabel" name="label_65">
+       <property name="text">
+        <string>stop at Iteration:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
       <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_S">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1083,21 +1104,7 @@ Multiplier:</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_64">
-       <property name="text">
-        <string>start at iteration:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QLabel" name="label_65">
-       <property name="text">
-        <string>stop at Iteration:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
+     <item row="1" column="3">
       <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_S">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1120,7 +1127,7 @@ Multiplier:</string>
      <item row="1" column="0">
       <widget class="QLabel" name="label_116">
        <property name="text">
-        <string>Symmetric rotation:</string>
+        <string>angle:</string>
        </property>
       </widget>
      </item>
@@ -1488,25 +1495,15 @@ Multiplier:</string>
           </layout>
          </item>
          <item>
-          <layout class="QGridLayout" name="gridLayout_12" columnstretch="0,1">
-           <property name="spacing">
-            <number>2</number>
-           </property>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_51">
+          <layout class="QHBoxLayout" name="horizontalLayout_24" stretch="0,1">
+           <item>
+            <widget class="QLabel" name="label_105">
              <property name="text">
-              <string>temp</string>
+              <string>scale:</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_39">
-             <property name="text">
-              <string>Scale:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
+           <item>
             <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs1">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1534,18 +1531,15 @@ Multiplier:</string>
        </widget>
       </item>
       <item>
-       <layout class="QGridLayout" name="gridLayout_30" rowstretch="0,0" columnstretch="0,0">
-        <property name="spacing">
-         <number>2</number>
-        </property>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_62">
+       <layout class="QHBoxLayout" name="horizontalLayout_25" stretch="0,1">
+        <item>
+         <widget class="QLabel" name="label_106">
           <property name="text">
-           <string>temp</string>
+           <string>abs(x * y)</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item>
          <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_z">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1570,13 +1564,6 @@ Multiplier:</string>
           </property>
           <property name="singleStep">
            <double>0.100000000000000</double>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_63">
-          <property name="text">
-           <string>abs x * y</string>
           </property>
          </widget>
         </item>
